k8s/apps/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.12.3
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: logs
              mountPath: /app/config/logs
            - name: host-root
              mountPath: /host-root
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
              httpHeaders:
                - name: Host
                  value: home.armleth.fr
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
              httpHeaders:
                - name: Host
                  value: home.armleth.fr
            initialDelaySeconds: 20
            periodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: homepage-config
        - name: logs
          emptyDir: {}
        - name: host-root
          hostPath:
            path: /
            type: Directory
