k8s/apps/homepage/oauth2-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-oauth2-proxy-service
  namespace: homepage
spec:
  selector:
    app: homepage-oauth2-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
