k8s/apps/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
