k8s/apps/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.armleth.fr`)
      kind: Rule
      services:
        - name: homepage-oauth2-proxy-service
          port: 4180
  tls:
    secretName: homepage-tls-secret
